--- a/webui/admin/css/admin.css
+++ b/webui/admin/css/admin.css
@@ -2,18 +2,65 @@
 	background-color: #882222;
 
 }
-
-.serv-sym{
-	color: white;
-	text-align: center;
-}
+.fader.ng-enter { transition:0.8s all; opacity:0; }
+.fader.ng-enter.ng-enter-active { opacity:1; }
+.fader.ng-leave { transition:0.0s linear all; opacity:1; }
+.fader.ng-leave.ng-leave-active { opacity:0; }
 
 .banner{
 
 	font-size: 70pt;
-	min-height: 10%; 
+	min-height: 10%;
+}
+.modal-header > h3{
+	color:grey;
+}
+table.table{
+	color:grey;
+	margin-bottom: 5px;
 }
 
-body{ 
+.myContent{
+	background-color: white;
+
+}
+.status{
+	height:32px;
+	width: 32px;
+	border-radius: 16px;
+}
+.stat_ok{
+	background-color: green;
+}
+.stat_wrong{
+	background-color: red;
+}
+body{
 	padding-top: 70px;
+	/*background: url("../background.jpg") fixed center no-repeat ;*/
+	background: linear-gradient(rgb(6, 64, 74), rgb(45, 58, 90)) no-repeat fixed center center;
+}
+.navbar{
+	background-color: rgba(255, 255, 255, 1) !important;
+	border-color: rgb(255, 255, 255) !important;
+	box-shadow: 0px 3px 5px;
+}
+.navbar-nav > li > a{
+	color: #666;
+}
+.nav > li > a:hover,
+.nav > li > a:focus{
+	text-decoration-style: dashed;
+}
+.addBtn{
+	width: 100%;
+	height: 32px;
+	background-color: rgba(153, 144, 144, 0.32);
+	text-align: center;
+	line-height: 2.2;
+	color:grey;
+}
+.addBtn:hover{
+	background-color: #868383;
+	cursor: pointer;
 }
